# ha-listeners

./: .gitignore  LICENSE  README.md  SESSION_SUMMARY.md  repository.yaml
custom_components/ha_intercom/: __init__.py  binary_sensor.py  config_flow.py  const.py  coordinator.py  manifest.json  number.py  select.py  services.yaml  strings.json  switch.py
custom_components/ha_intercom/translations/: en.json
firmware/: CMakeLists.txt  FLASH_MODEL.md  README.md  partitions.csv  platformio.ini  sdkconfig.defaults  sdkconfig.esp32s3
firmware/main/: CMakeLists.txt  aec.c  aec.h  agc.c  agc.h  audio_input.c  audio_input.h  audio_output.c  audio_output.h  button.c  button.h  chime_data.h  codec.c  codec.h  diagnostics.c  diagnostics.h  discovery.c  discovery.h  display.c  display.h  ha_mqtt.c  ha_mqtt.h  idf_component.yml  main.c  network.c  network.h  protocol.h  settings.c  settings.h  voice_assist.c  voice_assist.h  wake_chime_data.h  webserver.c  webserver.h
ha-addon/: config.yaml  intercom_hub.py  run.sh
intercom_hub/: CHANGELOG.md  DOCS.md  Dockerfile  README.md  apparmor.txt  config.yaml  intercom_hub.py  requirements.txt  run.sh  voice_pipeline.py
intercom_hub/translations/: en.yaml
intercom_hub/www/: index.html  intercom-ptt-card.js  ptt-v6.js  ptt-v7.js
